fix card layout on mobile

--- a/docs/docs-beta/src/styles/custom.scss
+++ b/docs/docs-beta/src/styles/custom.scss
@@ -552,19 +552,23 @@ dd code {
   display: grid;
   gap: 1rem;
   margin-bottom: 2rem;
-
   &.cols-2 {
     grid-template-columns: repeat(2, 1fr);
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
   }
   &.cols-3 {
     grid-template-columns: repeat(3, 1fr);
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
   }
   &.cols-4 {
     grid-template-columns: repeat(4, 1fr);
-  }
-
-  @media (max-width: 768px) {
-    grid-template-columns: 1fr;
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
 
